# AnnotationDemo

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/signApk/: 00.hisi811签名.bat  560paint.jks  811paint.jks  848-android.jks  966_android.jks  SignDemo.jks  board11.jks  mtk9632_an11.keystore  platform811.pk8  platform811.x509.pem  test.jks
app/src/androidTest/java/com/example/annotateimages/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AccelarateDraw.cpp  AccelarateDraw.h  CMakeLists.txt  Define.h  FbAbstract.h  FbImpl.cpp  LibFb.h  native.cpp
app/src/main/cpp/armeabi-v7a/: push-lib.bat  push-txt.bat
app/src/main/cpp/bk/: CMakeLists.txt
app/src/main/cpp/bk/Action/: DrawAction.cpp  DrawAction.h  EraseAction.cpp  EraseAction.h  abstract.cpp  abstract.h
app/src/main/cpp/bk/Fb/: FbAbstract.h  FbImpl.cpp
app/src/main/cpp/bk/Log/: LogUtil.cpp  LogUtil.h
app/src/main/cpp/bk/Show/: NativeWindowInterface.cpp  NativeWindowInterface.h
app/src/main/cpp/bk/armeabi-v7a/: public.libraries.txt  pull-lib.bat  testfb.c
app/src/main/cpp/bk/common/: BmpTools.h  FileFunc.h  FilePackage.h  FuncInfo.h  FuncUtils.h  LibFb_kjd_311d2.h  NativeGraphics.h  PixelFormat.h  ScreenCapClient.h  ShapeConver.h  SkStream.h  SkiaLog.h  SpatialRelationUtil.h  Str.h  StylusStrokeBuilder.h  Tools.h  common.h
app/src/main/cpp/bk/common/include/core/: SkFont.h
app/src/main/cpp/bk/common/libjpeg-turbo/: cderror.h  jerror.h  jinclude.h  jmorecfg.h  jpeglib.h
app/src/main/cpp/bk/common/libjpeg-turbo/android/: jconfigint.h
app/src/main/cpp/bk/common/libzip/: config.h  zip.h  zipint.h
app/src/main/cpp/bk/common/lunasvg/: svgdocument.h  svgelement.h
app/src/main/java/com/example/annotateimages/: MainActivity.java
app/src/main/java/com/example/log/: LogUtil.java
app/src/main/java/com/example/sharecode/: QRcode_rightshare.java  QRcodeshare.java
app/src/main/java/com/example/someutils/: BoardUtil.java  HttpUtils.java  MyDialog.java  ShareUtils.java
app/src/main/java/com/example/view/: AccelerateApi.java  AlwaysMarqueeTextView.java  AnnotateView.java  Version.java
app/src/main/java/com/example/wb/: AEraser.java  Configure.java  FingerEraser.java  GestureEraser.java  GradientPainter.java  IDrawer.java  Painter.java  Pencil.java  Show.java  StylusMeta.java  StylusStrokeBuilder.java  StylusStrokeRecord.java  Tools.java  Util.java  WhiteBoard.java
app/src/main/res/drawable/: back_selector.xml  bg_share.xml  bg_share_gray.xml  bg_side_end.xml  bg_side_start.xml  layout_shape4.xml  layout_shape5.xml  layout_shape6.xml  number_color_selector.xml  number_keyboard_selecter.xml  number_keyboard_selecter2.xml  text_color_selector.xml  textcolor_selector.xml  track.xml  zoom_selector.xml
app/src/main/res/layout/: activity_main.xml  dialog_share_progress.xml  qrcode_layout.xml  qrcode_right_layout.xml  side_paint_left.xml  side_paint_right.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/annotateimages/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
